tests/errors/syntax_err03.v
module a;
task to (
  input [3]x
);
endtask
endmodule

